# Quaternion

./: .git-credentials  CMakeLists.txt  README.md  dualquaternion.hpp  dualquaternion.inl.hpp  quaternion.cpp  quaternion.hpp  quaternion.inl.hpp  quaternion_new.hpp  runQuat.cpp  tags  test.cpp  test.hpp
lib/: .quaternion.hpp.swp  CMakeLists.txt  quaternion.cpp  quaternion.hpp  quaternion.inl.hpp  tags  test.cpp
test/: test_basic.cpp  test_quaternion_funcs.cpp  test_unit_basic.cpp
